# rimg

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  linker.ld  rimg.1  rimg.desktop
.cargo/: config.toml
openspec/changes/archive/2026-02-13-dynamic-linking-size-opt/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-wayland-image-viewer/: design.md  proposal.md  tasks.md
openspec/changes/gallery-background-thumbnails/: design.md  proposal.md  tasks.md
openspec/changes/gallery-background-thumbnails/specs/background-thumbnail-generation/: spec.md
openspec/changes/gallery-background-thumbnails/specs/gallery/: spec.md
openspec/changes/gallery-background-thumbnails/specs/image-loading/: spec.md
openspec/changes/v1-features/: design.md  proposal.md  tasks.md
openspec/changes/v1-features/specs/error-resilience/: spec.md
openspec/changes/v1-features/specs/image-loading/: spec.md
openspec/changes/v1-features/specs/input-handling/: spec.md
openspec/changes/v1-features/specs/manual-exif/: spec.md
openspec/changes/v1-features/specs/runtime-sorting/: spec.md
openspec/changes/wallpaper-mode/: design.md  proposal.md  tasks.md
openspec/specs/gallery/: spec.md
openspec/specs/image-loading/: spec.md
openspec/specs/input-handling/: spec.md
openspec/specs/rendering/: spec.md
openspec/specs/system-image-decoders/: spec.md
openspec/specs/windowing/: spec.md
pkg/arch/: PKGBUILD
src/: app.rs  font.rs  gallery.rs  image_loader.rs  input.rs  main.rs  protocols.rs  render.rs  status.rs  viewer.rs  wayland.rs
(+11 files in other folders)
